--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Splatoon2 Weapon Ranking Maker
 description: >- # this means to ignore newlines until "baseurl:"
-  Splatoon2のX帯500傑のブキ種別ランキングを生成するサイトです
+  Splatoon2のX帯500傑のブキ種別ランキングを生成するサイト
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sisno_boomx
